# Steganography-IP-protection

./: .dockerignore  .gitignore  Dockerfile  README.md  WAVES.py  about.html  api.py  docker-compose.yml  download_dataset.py  extract.html  flake.nix  hide.html  init.sql  main.py  prepare_data.py  pyproject.toml  requirements.txt  shell.nix  train.py  train_default.py  train_highres.py  train_layer_freeze.py  train_masked.py  train_v2.py  waves_benchmark.py
.github/workflows/: python-app.yml
LSBSteg/: LSBSteg.py  README  __init__.py
UUID/: Cryptography.py  UserMetadata.py  crypto.py  database.py  main.py  models.py
data/: cifar_loader.py  coco_loader.py
models/: LSBSteg.py  __init__.py  decoder_CIFAR.py  decoder_dense.py  encoder_CIFAR.py  encoder_dense.py  noise.py  stego_engine.py  train.py  user.py  userMetadata.py
static/: crypto_client.js  style.css
tests/: __init__.py  test_DataLoader.py  test_crypto.py  test_database.py  test_decoder.py  test_encoder.py  test_mask.py  test_noise.py  test_pipeline.py  test_usermodels.py  test_waves.py
utils/: crypto.py  database.py  download_weights.py  fec.py
